# aycwabtu

./: .gitignore  README.md  VSCode.lnk  makefile  mingw64.cmd  vscode.cmd
.github/workflows/: ci_linux.yml  ci_windows.yml
sbox/: bitsliced_block_sbox.c
src/: CMakeLists.txt  bs_algo.c  bs_algo.h  bs_block.c  bs_block_ab.c  bs_block_ab.h  bs_sse2.c  bs_sse2.h  bs_stream.c  bs_stream.h  bs_testcases.c  bs_uint32.c  bs_uint32.h  config.h  helper.c  helper.h  loop.c  loop.h  main.c  new 1.txt  ts.c  ts.h
src/sbox/: bitsliced_block_sbox.c  csablocksbox2bool.c
test/: testframe.sh
